# chatgpt_bot

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: deploy-to-prod.yaml  deploy-to-test.yaml  deploy.yaml  pipeline.yml
document_api/: api.py
kubernetes/base/: deployment.yaml
kubernetes/prod/: deployment.yaml  kustomization.yaml
kubernetes/test/: deployment.yaml  kustomization.yaml
notebooks/: .gitignore  csv_p.py  data_openai.ipynb
notebooks/data_csv/: reviews_202302.csv  reviews_202303.csv  reviews_202304.csv
notebooks/data_doc/: reviews_202301.doc  reviews_202302.doc  reviews_202303.doc  reviews_202304.doc
slack_bot/: Dockerfile  README.md  app.py  docker-entrypoint.sh  prod.env  pyproject.toml  test.env
slack_bot/data_doc/: [CDMX] Demographics CDMX Research, March 2022.docx
slack_bot/src/: settings.py
